--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <div className="container">
               <div className="row" >
               <a className="col s6 center light-blue waves-effect waves-light btn-large"><i className="material-icons right">assessment</i>View Statistics</a>
-              <a className="col s6 center light-blue waves-effect waves-light btn-large" onClick={ResetScore}><i className="material-icons right">autorenew</i>Reset</a>
+              <a href="#reset" className="col s6 center light-blue waves-effect waves-light btn-large" onClick={ResetScore}><i className="material-icons right">autorenew</i>Reset</a>
               </div>
               </div>
             </div>
