add beaker link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
           });
       }
       var NavBar = React.createClass({
-
         render: function() {
           return (
             <nav className="light-blue" role="navigation">
@@ -111,7 +110,7 @@
               <Scoreboard />
               <div className="container">
               <div className="row" >
-              <a className="col s6 center light-blue waves-effect waves-light btn-large"><i className="material-icons right">assessment</i>View Statistics</a>
+              <a href="http://127.0.0.1:8801/beaker/#/session/OoBAGz" target="_blank" className="col s6 center light-blue waves-effect waves-light btn-large"><i className="material-icons right">assessment</i>View Statistics</a>
               <a href="#reset" className="col s6 center light-blue waves-effect waves-light btn-large" onClick={ResetScore}><i className="material-icons right">autorenew</i>Reset</a>
               </div>
               </div>
