Increased title size slightly

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div className="col s6 m6 l6">
               <div className="card cyan z-depth-3">
                 <div className="card-content white-text activator">
-                  <span className="card-title activator">{this.props.player} {this.props.input ? this.parse(this.props.input) : this.getInput()}</span>
+                  <span className="card-title activator"style={{fontSize:'300%'}}>{this.props.player}      {this.props.input ? this.parse(this.props.input) : this.getInput()}</span>
                   <p style={{fontSize:'500%'}}>{this.props.score}</p>
                 </div>              
               </div>
